<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CheckMyDevice2_성주용</string>
    <string name="view_test">화면 테스트</string>
    <string name="noti_test">알림 테스트</string>
    <string name="gps_test">GPS 테스트</string>
    <string name="camera_test">카메라 테스트</string>
    <string name="sensor_test">센서 테스트</string>
    <string name="dev_info">개발자 정보</string>
    <string name="pixel_test">불량화소 테스트</string>
    <string name="multi_touch_test">멀티터치 테스트</string>
    <string name="sound_test">사운드 테스트</string>
    <string name="vibrate_test">진동 테스트</string>
    <string name="msg_back">종료하시겠습니까?</string>
    <string name="btn_yes">예</string>
    <string name="btn_no">아니오</string>
    <string name="title_activity_sub_view">SubViewActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sub_noti">SubNotiActivity</string>
    <string name="title_activity_dev_info">DevInfoActivity</string>
    <string name="title_activity_sensor_test">SensorTestActivity</string>
    <string name="title_activity_multi_touch">MultiTouchActivity</string>
    <string name="title_activity_pixel_test">PixelTestActivity</string>
    <string name="title_activity_sound_test">SoundTestActivity</string>
    <string name="title_activity_camera_test">CameraTestActivity</string>

    <!-- Toast Messages -->
    <string name="camera_not_found">No camera harware found</string>
    <string name="take_photo_help">Touch anywhere on screen to take picture</string>
</resources>
