<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/view_test"
        android:gravity="center"
        android:background="@color/material_blue_grey_950"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:text="@string/noti_test"
        android:gravity="center"
        android:layout_gravity="right"
        android:background="#003300"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:text="@string/gps_test"
        android:gravity="center"
        android:background="@color/material_blue_grey_950"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:text="@string/camera_test"
        android:gravity="center"
        android:layout_gravity="right"
        android:background="#003300"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:text="@string/sensor_test"
        android:gravity="center"
        android:background="@color/material_blue_grey_950"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:text="@string/dev_info"
        android:gravity="center"
        android:layout_gravity="right"
        android:background="#003300"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
